--- a/internal/service/sk/config/cfg.toml
+++ b/internal/service/sk/config/cfg.toml
@@ -7,13 +7,13 @@ secret = "i1ydX9RtHyuJTrw7frcu"
 connMaxLifeTime = 60
 maxIdleConn = 60
 maxOpenConn = 10
-addr = "mysql-0.mysql.mysql.svc.cluster.local:3306"
+addr = "127.0.0.1:3306"
 name = "seckill"
 pass = "root"
 user = "root"
 
 [redis]
-addr = "redis.mysql.svc.cluster.local:6379"
+addr = "127.0.0.1:6379"
 db = "0"
 maxRetries = 3
 minIdleConns = 5
