--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -4,6 +4,7 @@ ARG serviceName
 # The main mirrors are giving us timeout issues on builds periodically.
 # So we can try these.
 ENV TZ=Asia/Shanghai
+ENV SN=$serviceName
 # RUN sed -e 's/dl-cdn[.]alpinelinux.org/nl.alpinelinux.org/g' -i~ /etc/apk/repositories
 RUN echo "http://mirrors.aliyun.com/alpine/v3.4/main/" > /etc/apk/repositories \
     && apk --no-cache add tzdata zeromq \
@@ -17,4 +18,4 @@ WORKDIR /app
 COPY sk_$serviceName /app/sk_$serviceName
 COPY ./config/cfg.toml /app/cfg.toml
 
-ENTRYPOINT ["/app/sk_sk"]
+ENTRYPOINT ["/app/sk_${SN}"]
