--- a/internal/service/sk/config/cfg.toml
+++ b/internal/service/sk/config/cfg.toml
@@ -17,7 +17,7 @@ addr = "127.0.0.1:6379"
 db = "0"
 maxRetries = 3
 minIdleConns = 5
-pass = ""
+pass = "redis"
 poolSize = 10
 
 [log]
@@ -27,8 +27,9 @@ stdout = true
 
 [server]
 serverName = "sk_shop_sk"
-host = ":8082"
+host = ":8091"
 pprof = true
 
 [jaeger]
 udpEndpoint = "http://localhost:14268/api/traces"
+stdOut = true
