--- a/internal/service/sk/config/cfg.toml
+++ b/internal/service/sk/config/cfg.toml
@@ -29,6 +29,8 @@ stdout = true
 serverName = "sk_shop_sk"
 host = ":8091"
 pprof = true
+[server.grpc]
+shopHost = ":8082"
 
 [jaeger]
 udpEndpoint = "http://localhost:14268/api/traces"
