--- a/internal/service/sk/config/cfg.toml
+++ b/internal/service/sk/config/cfg.toml
@@ -37,7 +37,7 @@ shopHost = ":8082"
 
 [jaeger]
 udpEndpoint = "http://tempo.kube-ops.svc.cluster.local:14268/api/traces"
-stdOut = true
+stdOut = false
 
 [elasticJobETCD]
 endpoints = ["infra-etcd-cluster-0.infra-etcd-cluster.etcd.svc.cluster.local:2379"]
