update master config

--- a/internal/service/sk/config/cfg.toml
+++ b/internal/service/sk/config/cfg.toml
@@ -27,7 +27,7 @@ poolSize = 10
 logPath = "./sk-shop-sk.log"
 level = "debug" # DEBUG INFO WARN ERROR
 stdout = true
-jsonFormat = false
+jsonFormat = true
 
 [server]
 serverName = "sk_shop_sk"
